--- a/composer.json
+++ b/composer.json
@@ -63,26 +63,24 @@
         ]
     },
     "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "minimum-stability": "stable",
-      "prefer-stable": true,
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "platform": {
-      "php": "8.2",
-      "ext-pdo": "*",
-      "ext-pdo_mysql": "*"
-    }
+  "laravel": {
+    "dont-discover": []
   }
+},
+"config": {
+  "optimize-autoloader": true,
+  "preferred-install": "dist",
+  "sort-packages": true,
+  "platform": {
+  "php": "8.2",
+  "ext-pdo": "8.2",
+  "ext-pdo_mysql": "8.2"
+}
+
+},
+"minimum-stability": "stable",
+"prefer-stable": true
+
+
 }
 
