--- a/composer.json
+++ b/composer.json
@@ -1,86 +1,80 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
-    "require": {
-        "php": "^8.2",
-        "ext-curl": "*",
-        "ext-fileinfo": "*",
-        "ext-mbstring": "*",
-        "ext-pdo": "*",
-        "ext-zip": "*",
-        "barryvdh/laravel-dompdf": "^0.9.0",
-        "doctrine/dbal": "2.13",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.65",
-        "laravel/jetstream": "^2.4",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5",
-        "milon/barcode": "^8.0",
-        "realrashid/sweet-alert": "^3.1",
-        "spatie/laravel-permission": "*",
-        "yajra/laravel-datatables-oracle": "~9.0"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "jason-guru/laravel-make-repository": "^0.0.3",
-        "laravel/dusk": "^6.25",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
-    },
-    "extra": {
-  "laravel": {
-    "dont-discover": []
-  }
-},
-"config": {
-  "optimize-autoloader": true,
-  "preferred-install": "dist",
-  "sort-packages": true,
-  "platform": {
-  "php": "8.2",
-  "ext-pdo": "8.2",
-  "ext-pdo_mysql": "8.2"
+  "name": "laravel/laravel",
+  "type": "project",
+  "description": "The Laravel Framework.",
+  "keywords": ["framework", "laravel"],
+  "license": "MIT",
+  "require": {
+    "php": "^8.2",
+    "ext-curl": "*",
+    "ext-fileinfo": "*",
+    "ext-mbstring": "*",
+    "ext-pdo": "*",
+    "ext-zip": "*",
+    "barryvdh/laravel-dompdf": "^0.9.0",
+    "doctrine/dbal": "2.13",
+    "fruitcake/laravel-cors": "^2.0",
+    "guzzlehttp/guzzle": "^7.0.1",
+    "laravel/framework": "^8.65",
+    "laravel/jetstream": "^2.4",
+    "laravel/sanctum": "^2.11",
+    "laravel/tinker": "^2.5",
+    "livewire/livewire": "^2.5",
+    "milon/barcode": "^8.0",
+    "realrashid/sweet-alert": "^3.1",
+    "spatie/laravel-permission": "*",
+    "yajra/laravel-datatables-oracle": "~9.0"
+  },
+  "require-dev": {
+    "facade/ignition": "^2.5",
+    "fakerphp/faker": "^1.9.1",
+    "jason-guru/laravel-make-repository": "^0.0.3",
+    "laravel/dusk": "^6.25",
+    "laravel/sail": "^1.0.1",
+    "mockery/mockery": "^1.4.4",
+    "nunomaduro/collision": "^5.10",
+    "phpunit/phpunit": "^9.5.10"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=laravel-assets --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "platform": {
+      "php": "8.2"
+    }
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
-
-},
-"minimum-stability": "stable",
-"prefer-stable": true
-
-
-}
-
