--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,6 @@ server {
     listen 80;
     index index.php index.html;
     server_name localhost;
-
     root /var/www/public;
 
     location / {
@@ -10,10 +9,11 @@ server {
     }
 
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
