--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     },
     "dependencies": {
         "express": "^4.18.1",
+        "laravel-echo": "^2.1.6",
+        "pusher-js": "^8.4.0",
         "socket.io-client": "^4.5.3"
     }
 }
