--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=31256ea808b64b30da74",
+    "/css/app.css": "/css/app.css?id=40b8b57dc6a7a1fdd3d4"
 }
