--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=504cf0be29550ac419fd",
+    "/css/app.css": "/css/app.css?id=4473c81e90f63b76e679"
 }
